--- a/MyApp/MyApp.csproj
+++ b/MyApp/MyApp.csproj
@@ -5,6 +5,11 @@
     <TargetFramework>net7.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <ContainerImageName>MyApp</ContainerImageName>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.NET.Build.Containers" Version="0.4.0" />
+  </ItemGroup>
 
 </Project>
